# comfyui-highlight-connections

./: highlight_connections.py  pyproject.toml
js/: highlight_connections.js
