[project]
name = "comfyui-highlight-connections"
description = "A node that can be dropped into a group. When a node is then clicked within that group, all nodes and connections in that group get greyed out and the connections from the clicked node go bright red."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HentaiGirlfriendDotCom/comfyui-highlight-connections"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-highlight-connections"
Icon = ""
